1. Basic setup complete, brutalist design implemented

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,14 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true
-  }
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "types/**/*.d.ts"
+  ],
+  "exclude": [
+    "ui-backup/**/*",
+    "node_modules"
+  ]
 }
